ZIG-600: Fix filters chevron overlap introduced from other branch.

--- a/src/components/CustomFilters/CustomFilters.scss
+++ b/src/components/CustomFilters/CustomFilters.scss
@@ -12,7 +12,6 @@
       color: $purple;
       font-family: "PlexSans-Medium";
       font-size: 16px;
-      margin-right: 34px;
     }
   }
 }
