--- a/src/components/CustomSelect/CustomSelect.scss
+++ b/src/components/CustomSelect/CustomSelect.scss
@@ -20,8 +20,8 @@
   .select {
     border-radius: 4px;
     height: 32px;
-    margin-right: 50px;
-    min-width: 94px;
+    margin-right: 20px;
+    min-width: 130px;
 
     > div {
       align-items: center;
